# Meetscribe

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/autonotes/: cli.py  gcal.py
src/meetscribe/: __init__.py  audio.py  cli.py  config.py  daemon.py  ingest.py  jira.py  llm.py  processing.py  transcribe.py
tests/: test_audio.py  test_config.py  test_ingest.py  test_logic.py
